# rag-system

./: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml  rag-system.postman_collection.json  requirements.txt
.github/: copilot-instructions.md
app/: __init__.py  config.py  main.py
app/clients/: __init__.py  llm_client.py
app/models/: __init__.py  schemas.py
app/routes/: __init__.py  ingest.py  query.py  session.py
app/services/: __init__.py  chat_service.py  ingestion.py  llm.py  retrieval copy.py  retrieval.py  session_service.py  tools.py
app/storage/: __init__.py  db.py  document_reader.py  vector_store.py
app/utils/: __init__.py  chunking.py  embedding.py  similarity.py
data/: architecture_codeflow_backup.html  architecture_codeflow_v1.html  architecture_codeflow_v2.html  chat.db
data/embeddings/: files.json
data/embeddings/chunks/: API_Gateway.txt.json  AWS_Services.txt.json  Artificial_Intelligence.txt.json  CI_CD_Pipelines.txt.json  Cloud_Computing.txt.json  Cyber_Security.txt.json  Data_Privacy.txt.json  Database_Systems.txt.json  Deep_Learning.txt.json  DevOps_Practices.txt.json  Diabetes.txt.json  Distributed_Systems.txt.json  Docker_Basics.txt.json  FastAPI_Framework.txt.json  Heart_Disease.txt.json  Kubernetes_Architecture.txt.json  (+4 more)
data/raw/: API_Gateway.txt  AWS_Services.txt  Artificial_Intelligence.txt  CI_CD_Pipelines.txt  Cloud_Computing.txt  Cyber_Security.txt  Data_Privacy.txt  Database_Systems.txt  Deep_Learning.txt  DevOps_Practices.txt  Diabetes.txt  Distributed_Systems.txt  Docker_Basics.txt  FastAPI_Framework.txt  Heart_Disease.txt  Kubernetes_Architecture.txt  Machine_Learning.txt  Microservices_Design.txt  NoSQL_Databases.txt  Python_Programming.txt
generation/: generate_kb.py
tests/: test_db.py  test_integration.py  test_retrieval.py  test_routes.py
